:rotating_light: 删除过期API